Handle parent folders or convertable URLs.

So far we converted URLs which actually exist. Now we also handle
partial URLs like /media/foo if a storage is mounted on /media/foobar.
This is handled by adding additional regex filters to the already
existing one.

BUG: 284529